# psx-hashcat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  iso.xml  system.cnf
src/: cd_wordlist.c  cd_wordlist.h  main.c  sha256.c  sha256.h  splash_assets.h  wordlist_info.h
tools/: gen_splash_assets.py  gen_wordlist_info.py
